src/objects/Project_AOI_Tract__c.object
<CustomObject>
    <fields>
        <fullName>Tract__c</fullName>
        <label>Tract</label>
        <referenceTo>Tract__c</referenceTo>
        <relationshipLabel>ProjectAOITracts</relationshipLabel>
        <relationshipName>ProjectAOITracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>aoiMaxOtgPricePerAcre__c</fullName>
        <formula>projectAoi__r.aoiMaxOtgPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AOI Max OTG Price Per Acre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>aoiMaxOtgPrice__c</fullName>
        <formula>if( projectAoi__r.isParent__c , 0, aoiMaxOtgPricePerAcre__c * netAcresWithinAoi__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AOI Max OTG Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>aoiTargetOtgPricePerAcre__c</fullName>
        <formula>projectAoi__r.aoiTargetOtgPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AOI Target OTG Price Per Acre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>aoiTargetOtgPrice__c</fullName>
        <formula>if( projectAoi__r.isParent__c , 0, aoiTargetOtgPricePerAcre__c *  netAcresWithinAoi__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AOI Target OTG Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>grossAcresWithinAoi__c</fullName>
        <formula>Tract__r.Gross_Acres__c *  percentageOfAcreageInAoi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Acres Within AOI</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>netAcreageUnits__c</fullName>
        <formula>TEXT(Tract__r.netAcreageUnits__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Acreage Units</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netAcresWithinAoi__c</fullName>
        <formula>Tract__r.netAcres__c *  percentageOfAcreageInAoi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Acres within AOI</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percentageOfAcreageInAoi__c</fullName>
        <label>Percentage of Acreage in AOI</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pricingNetAcres__c</fullName>
        <formula>if( projectAoi__r.isParent__c , 0,  netAcresWithinAoi__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>pricingNetAcres</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pricingPercentAcres__c</fullName>
        <formula>if( projectAoi__r.isParent__c , 0,   percentageOfAcreageInAoi__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>pricingPercentAcres</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>projectAoi__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project AOI</label>
        <referenceTo>Project_AOI__c</referenceTo>
        <relationshipLabel>ProjectAOITracts</relationshipLabel>
        <relationshipName>ProjectAOITracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tractGrossAcres__c</fullName>
        <formula>Tract__r.Gross_Acres__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tract Gross Acres</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tractNetAcres__c</fullName>
        <formula>Tract__r.netAcres__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tract Net Acres</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Project AOI Tract</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project AOI Tract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProjectAOITracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>